include_directories(${BigTopicModel_SOURCE_DIR}/src/util)
include_directories(${BigTopicModel_SOURCE_DIR}/src/model)
include_directories(${BigTopicModel_SOURCE_DIR}/src/engine)
add_executable(lda main.cpp lda.cpp fast_lda.cpp)
target_link_libraries(lda util ${MPI_LIBRARIES} ${GLOG} ${GFLAGS})
#target_link_libraries(lda util ${MPI_LIBRARIES} ${BIGMPI} ${GLOG} ${GFLAGS})
